[tool.poetry]
name = "ground_station"
version = "1.0.3"
description = ""
authors = ["crinitusfeles <crinitusfeles@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
python-multipart = "^0.0.5"
pymongo = "^4.2.0"
skyfield = "^1.43.1"
uvicorn = {extras = ["standart"], version = "^0.18.2"}
pytz = "^2022.1"
celery = "^5.2.7"
pyserial = "^3.5"
requests = "^2.28.1"
tzdata = "^2022.2"
pylint = "^2.14.5"
rich = "^12.6.0"
flower = "^1.2.0"
fastapi-keycloak = "^1.0.7"
websockets = "^10.4"
websocket-client = "^1.4.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "ground_station/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"